feat: Add --folder option to select issues from a specific filter set folder in aviator audit command